# RowboBoat

./: .gitmodules  README.md
rowboboat_bringup/: CMakeLists.txt  package.xml
rowboboat_bringup/config/: teleop.yaml
rowboboat_bringup/launch/: arms.launch.py  arms_bs.launch.py  rowboboat.launch.py  teleop.launch.py
rowboboat_bringup/scripts/: can_activate.sh
rowboboat_bringup/systemd/: INSTALL.sh  rowboboat.service  rowboboat.sh  rowboboat_can.service
rowboboat_control/: CMakeLists.txt  package.xml  rowboboat_control_plugins.xml
rowboboat_control/config/: paddle_wheel.yaml
rowboboat_control/include/rowboboat_control/: paddle_wheel.hpp
rowboboat_control/launch/: arms_control.launch.py
rowboboat_control/src/: paddle_wheel.cpp
rowboboat_description/: CMakeLists.txt  package.xml
rowboboat_description/launch/: description.launch.py
rowboboat_description/meshes/: PaddleEOAT.stl  RowBoBoatMount.stl
rowboboat_description/urdf/: piper_left.urdf.xacro  piper_right.urdf.xacro  rowboboat.urdf.xacro  rowboboat_control.urdf.xacro
rowboboat_viz/: CMakeLists.txt  package.xml
rowboboat_viz/launch/: view_model.launch.py  view_robot.launch.py
rowboboat_viz/rviz/: robot.rviz
